@@ -107,6 +107,7 @@
 #	The location of the rpm database file(s) after "rpm --rebuilddb".
 %_dbpath_rebuild	%{_dbpath}
 
+#
 #	Path to script that creates debug symbols in a /usr/lib/debug
 #	shadow tree.
 %__debug_install_post   \
@@ -129,17 +130,19 @@ package or when debugging this package. \
 
 %_defaultdocdir		%{_usr}/doc
 
+# Use internal dependency generator rather than external
+# find-provides/find-requires)?
+%_use_internal_dependency_generator	1
+
 #	Path to scripts to autogenerate package dependencies.
 %__find_provides	@RPMCONFIGDIR@/rpmdeps --provides
 %__find_requires	@RPMCONFIGDIR@/rpmdeps --requires
-#%__find_prereq		???
 #%__find_conflicts	???
 #%__find_obsoletes	???
 
 %__perl_provides	@RPMCONFIGDIR@/perl.prov
 %__perl_requires	@RPMCONFIGDIR@/perl.req
 
-#
 # fixowner, fixgroup, and fixperms are run at the end of hardcoded setup
 # These macros are necessary only for legacy compatibility, and have moved
 # to per-platform macro configuration (i.e. @RPMCONFIGDIR@/<arch>-<os>/macros)
